sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/Sanergy_Assets_Issuance__c.object-meta.xml
<CustomObject>
    <description>Issuance Register of Sanergy Assets</description>
    <label>Sanergy Assets Issuance</label>
    <nameField>
        <displayFormat>SA{0000000}</displayFormat>
        <label>Sanergy Assets Issuance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanergy Assets Issuances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>