sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <description>Sanergy Asset ID</description>
    <label>Sanergy Asset</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Sanergy Assets Issuances</relationshipLabel>
    <relationshipName>Sanergy_Assets_Issuances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>