sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Asset_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Inspection_Date__c</fullName>
    <description>Date issued asset will be due for maintenance inspection</description>
    <label>Asset Inspection Date</label>
    <type>Date</type>
</CustomField>