sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>Asset_ID__r.RecordType.Name + &quot;(&quot; +  Asset_ID__r.Asset_Name__c + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>