sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Asset_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Asset_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the asset issuance to a requisition that had been made prior</description>
    <label>Asset Requisition</label>
    <referenceTo>Asset_Requisition__c</referenceTo>
    <relationshipLabel>Sanergy Assets Issuances</relationshipLabel>
    <relationshipName>Sanergy_Assets_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>