sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Asset_Returned__c.field-meta.xml
<CustomField>
    <fullName>Asset_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset returned to inventory</description>
    <label>Asset Returned</label>
    <type>Checkbox</type>
</CustomField>