sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Date_Due__c.field-meta.xml
<CustomField>
    <fullName>Date_Due__c</fullName>
    <description>Date Asset is due.</description>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>