sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <description>Date Asset was issued</description>
    <label>Date Issued</label>
    <required>true</required>
    <type>Date</type>
</CustomField>