sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Returned__c</fullName>
    <description>Date asset was returned</description>
    <label>Date Returned</label>
    <type>Date</type>
</CustomField>