sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Employment_Status__c</field>
            <operation>notEqual</operation>
            <value>Terminated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sanergy Assets Issuances</relationshipLabel>
    <relationshipName>Sanergy_Assets_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>