sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Employee_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_Department__c</fullName>
    <formula>TEXT(Employee__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Department</label>
    <type>Text</type>
</CustomField>