sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/FreshDesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>FreshDesk_Ticket_ID__c</fullName>
    <description>Associated FreshDesk Ticket ID</description>
    <label>FreshDesk Ticket ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>