sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Hours_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Service__c</fullName>
    <formula>End_Date_Time__c - Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>