sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Type of asset issuance</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Issue to Staff</fullName>
            </value>
            <value>
                <fullName>Short Term Issue to Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>