sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Item_Condition_on_Return__c.field-meta.xml
<CustomField>
    <fullName>Item_Condition_on_Return__c</fullName>
    <label>Item Condition on Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Condition</fullName>
            </value>
            <value>
                <fullName>Minor Damage</fullName>
            </value>
            <value>
                <fullName>Major Damage</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>