sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Item_Condition_on_Return_Comments__c.field-meta.xml
<CustomField>
    <fullName>Item_Condition_on_Return_Comments__c</fullName>
    <description>Comments to be entered if the condition on return is other than Good Condition</description>
    <label>Item Condition on Return Comments</label>
    <type>TextArea</type>
</CustomField>