sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/fields/Recruitment_Requisition_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Requisition_Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recruitment Requisition Line Item</label>
    <referenceTo>Recruitment_Requisition_Line_Item__c</referenceTo>
    <relationshipLabel>Sanergy Assets Issuances</relationshipLabel>
    <relationshipName>Sanergy_Assets_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>