sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/recordTypes/Sanergy_Asset_Issuances.recordType-meta.xml
<RecordType>
    <fullName>Sanergy_Asset_Issuances</fullName>
    <active>true</active>
    <label>Sanergy Asset Issuances</label>
</RecordType>