sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/recordTypes/Sanergy_Plant_Machinery_Issuance.recordType-meta.xml
<RecordType>
    <fullName>Sanergy_Plant_Machinery_Issuance</fullName>
    <active>true</active>
    <label>Sanergy Plant Machinery Issuance</label>
</RecordType>