sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/validationRules/Item_Condition_on_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_Condition_on_Return</fullName>
    <active>true</active>
    <description>Describe item condition on return of asset</description>
    <errorConditionFormula>AND 
( 
Asset_Returned__c = True, 
ISPICKVAL(  Item_Condition_on_Return__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>If asset has been returned, select the condition of the returned asset.</errorMessage>
</ValidationRule>