sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/validationRules/Require_Issue_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Issue_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Issue_Type__c))</errorConditionFormula>
    <errorMessage>You need to select the issue type</errorMessage>
</ValidationRule>