sfSandBoxCode/force-app/main/default/objects/Sanergy_Assets_Issuance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Name__c</columns>
    <columns>Employee__c</columns>
    <columns>Employee_Department__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Date_Issued__c</columns>
    <columns>Date_Due__c</columns>
    <columns>Asset_Returned__c</columns>
    <columns>Date_Returned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>